Converted to dark theme

--- a/header.html
+++ b/header.html
@@ -5,11 +5,11 @@
             .icon {
                 margin-left: 1%;
                 float: right;
-                fill: #474747;
+                fill: #91caed;
             }
             .icon:hover {
-                fill: #3fa6bf;
-                color: #3fa6bf;
+                fill: #236f9e;
+                color: #236f9e;
             }
         </style>
         <a id="twitter-icon" class="icon" target="_blank" href="https://twitter.com/riverliway">
