--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
 
-<link href='https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; --title-bar-height:20px; }
+<link href='https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><link href='https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap' rel='stylesheet' type='text/css' /><link href='https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; --title-bar-height:20px; }
 .mac-os-11 { --title-bar-height:28px; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
 body { margin: 0px; padding: 0px; height: auto; inset: 0px; font-size: 1rem; line-height: 1.42857; overflow-x: hidden; background: inherit; tab-size: 4; }
@@ -207,20 +207,28 @@ mark .md-meta { color: rgb(0, 0, 0); }
 }
 
 @include-when-export url(https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap);
+@include-when-export url(https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap);
 
 /* open-sans-regular - latin-ext_latin */
   /* open-sans-italic - latin-ext_latin */
     /* open-sans-700 - latin-ext_latin */
     /* open-sans-700italic - latin-ext_latin */
-  html {
+  /* Oxygen for headers */
+html {
     font-size: 16px;
     -webkit-font-smoothing: antialiased;
 }
 
 body {
     font-family: "Open Sans","Clear Sans", "Helvetica Neue", Helvetica, Arial, 'Segoe UI Emoji', sans-serif;
-    color: rgb(51, 51, 51);
+    color: #eee;
     line-height: 1.6;
+    background-color: #21182b;
+}
+
+::selection {
+    background: #154b6d;
 }
 
 #write {
@@ -247,8 +255,26 @@ body {
     margin-top: 30px;
 }
 
+.title > img, .title > h2 { 
+    display: inline; 
+    margin-right: 15px;
+}
+
 a {
-    color: #4183C4;
+    color: #91caed;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+    color: #236f9e;
+}
+a > h1,
+a > h2,
+a > h3,
+a > h4,
+a > h5,
+a > h6 {
+    cursor: pointer;
 }
 h1,
 h2,
@@ -262,6 +288,7 @@ h6 {
     font-weight: bold;
     line-height: 1.4;
     cursor: text;
+    font-family: 'Oxygen', sans-serif;
 }
 h1:hover a.anchor,
 h2:hover a.anchor,
@@ -298,12 +325,11 @@ h6 code {
 h1 {
     font-size: 2.25em;
     line-height: 1.2;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #e4d3f2;
 }
 h2 {
     font-size: 1.75em;
     line-height: 1.225;
-    border-bottom: 1px solid #eee;
 }
 
 /*@media print {
@@ -335,7 +361,7 @@ h5 {
 }
 h6 {
    font-size: 1em;
-    color: #777;
+    color: #eee;
 }
 p,
 blockquote,
@@ -590,35 +616,9 @@ header, .context-menu, .megamenu-content, footer{
 
 
 
-</style><title>index</title>
+</style><title>River's Portfolio</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><iframe height="50" scrolling="no" title="Header" src="header.html" frameborder="no" allowtransparency="true" style="width: 100%; user-select:none;">Header</iframe><style>
-@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap');
-a:hover {
-    color: #3fa6bf;
-    fill: #3fa6bf;
-}
-h2, h3 {
-    font-family: 'Oxygen', sans-serif;
-    font-weight: 700;
-}
-.title > h1, .title > h3 {
-    cursor: pointer;
-}
-.title {
-    text-decoration: none;
-    color: #3c585e;
-    height: 48px;
-}
-.title > h3, .title > img {
-    display: inline;
-    margin-right: 15px;
-    fill: #3c585e;
-}
-</style>
-<div>
-<a id="home-icon" class="title" href="https://riverway.li"><h1>Riverli</h1></a>
-</div><p><span>Hello! </span></p><p><span>This website serves as a home for all of my projects. I am a computer scientist and mathematician by trade, but I also love drawing, tennis, and Japanese as hobbies. </span></p><p><span>Below is a sample of some of my favorite projects.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://riverway.li/qcsg" class="title"><img src="qc.svg" height="48px"><h3 style="top: 3px">Quantum Computing Survival Guide</h3></a></div><p><span>The quantum computing survival guide is a freely available, interactive online textbook which serves an introduction to quantum computing. I found a lot of available resources for quantum computing are either too simple or too complex. Many articles written for the general public explain qubits and superposition, but fail to explain how those concepts extend to useful computation for solving actual problems. Papers in academic journals assume the reader is already an expert in quantum computation and use advanced ideas without explaining them. I felt there weren&#39;t enough resources that bridged that gap for intermediate level readers. The QCSG is still a work in development, but the first several chapters provide a fresh perspective on quantum computing by leveraging interactive applets and 3D graphics. </span></p><p><span>The textbook was written in Typora and the interactive applets were made with the p5.js library.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://www.youtube.com/channel/UCSrJD5Ic4ClxCpg68tVfvOg" class="title"><img src="paint.svg" height="48px"><h3 style="top: 3px">pAInter</h3></a></div><p><span>I find style transfer networks to be a fascinating field in machine learning. The goal of a style transfer network is to learn an artist&#39;s style from a single image and then &quot;paint&quot; over other images in that style. However, painting over video is more tricky because the small changes from one frame to the next can drastically change the output brush strokes. This produces a video with lots of flickering, and we&#39;d like a smooth video. We can use an optical flow library which takes a key frame and morphs it to match the nearby frames of a video. Combined with pre and postprocessing techniques to improve the quality of the output, this model produces beautiful painted videos which can be viewed on my </span><a target="_blank" href="https://www.youtube.com/channel/UCSrJD5Ic4ClxCpg68tVfvOg"><span>YouTube</span></a><span> channel. </span></p><p><span>The style transfer network uses the Tensorflow library. Optical flow was done with EbSynth. OpenCV was used for pre and postprocessing.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://www.3blue1brown.com/" class="title"><img src="3b1b.svg" height="48px"><h3 style="top: 4px">3blue1brown Website</h3></a></div><p><span>3blue1brown is a popular math exposition YouTube channel created by Grant Sanderson which explains math, computer science, and physics topics in an animated fashion. I worked for Grant to translate some of the videos into a written form which were published on his website. We felt that some of the articles would benefit from interactivity so I created the interactive applets for several articles, including Fourier transform, hyperdarts, and quantum mechanics among others.</span></p><p><span>The website was developed in React. The interactive applets were made with the p5.js library.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://riverway.li/minerva" class="title"><img src="stocks.svg" height="48px"><h3 style="top: 8px">Integra</h3></a></div><p><span>Many machine learning engineers have considered training their own artificial intelligence to trade assets in a financial market. Integra is my attempt at time series analysis for trading cryptocurrency. I tried training both an LSTM and CNN for Integra, but they both performed very poorly. I found that training a model on selected indicators instead of price data directly improved the performance considerably. In the future I&#39;d like to experiment to see if sentiment analysis on live social media feed could improve the model even more for long term trends.</span></p><p><span>BinancePythonAPI was used to connect to the crypto exchange. Tensorflow was used for training and evaluating the models.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://riverway.li/kikai" class="title"><img src="youtube.svg" height="48px"><h3 style="top: 5px">Project Kikai</h3></a></div><p><span>My master&#39;s thesis project is in Natural Language Generation for producing an artificial YouTuber. I am trying to use GPT2 to generate scripts of YouTube videos and then have a voice synthesizer create an audio version of the script. The next step is to perform emotion analysis (an extension of sentiment analysis) to animate a figure for the video component. So far, a number of problems have already shown up when using just one GPT2 model. So the idea is to now train two GPT2 models on different sources and have them converse with each other. This helps bring new topics into the conversation and avoids the script just going in circles.</span></p><p><span>OpenGPT is used for training and evaluating the text generation models.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://riverway.li/qilcom/Qilcom_Model.pdf" class="title"><img src="qilcom.svg" height="48px"><h3 style="top: 5px">QILCOM Research Project</h3></a></div><p><span>QILCOM is the Quantum Ideas Lab Competition hosted by Stevens Institute of Technology. It is a research competition where teams of undergraduates are paired up with a PhD student to perform experiments and conduct research in the field of quantum computing. My team attempted to find a state estimation algorithm which could approximate the resulting state of certain types of quantum circuits more efficiently. Simulating general quantum circuits is extremely expensive in time and space complexity, so our algorithm could dramatically reduce that time for specific types of quantum circuits by sacrificing a bit of accuracy. Although it fails to efficiently simulate circuits like Grover&#39;s search or Shor&#39;s factoring algorithm, it can offer improvement against Google&#39;s Random Circuit Sampling problem.</span></p><p><span>This project was developed in Java without any additional libraries.</span></p><p>&nbsp;</p></div></div>
+<div id='write'  class=''><iframe height="50" scrolling="no" title="Header" src="header.html" frameborder="no" allowtransparency="true" style="width: 100%; user-select:none;">Header</iframe><h1 id='riverli'><a href='https://riverway.li'><span>Riverli</span></a></h1><p><span>Hello! </span></p><p><span>This website serves as a home for all of my projects. I am a computer scientist and mathematician by trade, but I also love drawing, tennis, and Japanese as hobbies. </span></p><p><span>Below is a sample of some of my favorite projects.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://riverway.li/qcsg" class="title"><img src="qc.svg" height="48px"><h2 style="top: 5px">Quantum Computing Survival Guide</h2></a></div><p><span>The quantum computing survival guide is a freely available, interactive online textbook which serves an introduction to quantum computing. I found a lot of available resources for quantum computing are either too simple or too complex. Many articles written for the general public explain qubits and superposition, but fail to explain how those concepts extend to useful computation for solving actual problems. Papers in academic journals assume the reader is already an expert in quantum computation and use advanced ideas without explaining them. I felt there weren&#39;t enough resources that bridged that gap for intermediate level readers. The QCSG is still a work in development, but the first several chapters provide a fresh perspective on quantum computing by leveraging interactive applets and 3D graphics. </span></p><p><span>The textbook was written in Typora and the interactive applets were made with the p5.js library.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://www.youtube.com/channel/UCSrJD5Ic4ClxCpg68tVfvOg" class="title"><img src="paint.svg" height="48px"><h2 style="top: 3px">pAInter</h2></a></div><p><span>I find style transfer networks to be a fascinating field in machine learning. The goal of a style transfer network is to learn an artist&#39;s style from a single image and then &quot;paint&quot; over other images in that style. However, painting over video is more tricky because the small changes from one frame to the next can drastically change the output brush strokes. This produces a video with lots of flickering, and we&#39;d like a smooth video. We can use an optical flow library which takes a key frame and morphs it to match the nearby frames of a video. Combined with pre and postprocessing techniques to improve the quality of the output, this model produces beautiful painted videos which can be viewed on my </span><a target="_blank" href="https://www.youtube.com/channel/UCSrJD5Ic4ClxCpg68tVfvOg"><span>YouTube</span></a><span> channel. </span></p><p><span>The style transfer network uses the Tensorflow library. Optical flow was done with EbSynth. OpenCV was used for pre and postprocessing.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://www.3blue1brown.com/" class="title"><img src="3b1b_color.svg" height="48px"><h2 style="top: 6px">3blue1brown Website</h2></a></div><p><span>3blue1brown is a popular math exposition YouTube channel created by Grant Sanderson which explains math, computer science, and physics topics in an animated fashion. I worked for Grant to translate some of the videos into a written form which were published on his website. We felt that some of the articles would benefit from interactivity so I created the interactive applets for several articles, including Fourier transform, hyperdarts, and quantum mechanics among others.</span></p><p><span>The website was developed in React. The interactive applets were made with the p5.js library.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://riverway.li/minerva" class="title"><img src="stocks.svg" height="48px"><h2 style="top: 10px">Integra</h2></a></div><p><span>Many machine learning engineers have considered training their own artificial intelligence to trade assets in a financial market. Integra is my attempt at time series analysis for trading cryptocurrency. I tried training both an LSTM and CNN for Integra, but they both performed very poorly. I found that training a model on selected indicators instead of price data directly improved the performance considerably. In the future I&#39;d like to experiment to see if sentiment analysis on live social media feed could improve the model even more for long term trends.</span></p><p><span>BinancePythonAPI was used to connect to the crypto exchange. Tensorflow was used for training and evaluating the models.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://riverway.li/kikai" class="title"><img src="youtube.svg" height="48px"><h2 style="top: 6px">Project Kikai</h2></a></div><p><span>My master&#39;s thesis project is in Natural Language Generation for producing an artificial YouTuber. I am trying to use GPT2 to generate scripts of YouTube videos and then have a voice synthesizer create an audio version of the script. The next step is to perform emotion analysis (an extension of sentiment analysis) to animate a figure for the video component. So far, a number of problems have already shown up when using just one GPT2 model. So the idea is to now train two GPT2 models on different sources and have them converse with each other. This helps bring new topics into the conversation and avoids the script just going in circles.</span></p><p><span>OpenGPT is used for training and evaluating the text generation models.</span></p><p>&nbsp;</p><div><a target="_blank" href="https://riverway.li/qilcom/Qilcom_Model.pdf" class="title"><img src="qilcom.svg" height="48px"><h2 style="top: 6px">QILCOM Research Project</h2></a></div><p><span>QILCOM is the Quantum Ideas Lab Competition hosted by Stevens Institute of Technology. It is a research competition where teams of undergraduates are paired up with a PhD student to perform experiments and conduct research in the field of quantum computing. My team attempted to find a state estimation algorithm which could approximate the resulting state of certain types of quantum circuits more efficiently. Simulating general quantum circuits is extremely expensive in time and space complexity, so our algorithm could dramatically reduce that time for specific types of quantum circuits by sacrificing a bit of accuracy. Although it fails to efficiently simulate circuits like Grover&#39;s search or Shor&#39;s factoring algorithm, it can offer improvement against Google&#39;s Random Circuit Sampling problem.</span></p><p><span>This project was developed in Java without any additional libraries.</span></p><p>&nbsp;</p></div></div>
 </body>
 </html>
