--- a/v2/index.html
+++ b/v2/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/riverliway/website/refs/heads/main/v2/public/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/riverliway/website/refs/heads/main/v2/public/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/riverliway/website/refs/heads/main/v2/public/favicon-16x16.png" />
+    <link rel="manifest" href="https://raw.githubusercontent.com/riverliway/website/refs/heads/main/v2/public/site.webmanifest" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title>Riverli</title>
   </head>
