--- a/v2/index.html
+++ b/v2/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/riverliway/website/refs/heads/main/v2/public/favicon-16x16.png" />
     <link rel="manifest" href="https://raw.githubusercontent.com/riverliway/website/refs/heads/main/v2/public/site.webmanifest" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riverli</title>
   </head>
   <body>
